# common

./: README.md  app.go  go.mod  go.sum  options.go
api/metadata/: metadata.pb.go  metadata.proto  metadata_grpc.pb.go  metadata_http.pb.go  server.go
cmd/protoc-gen-go-configs/: configs.go  configs_test.go  fileInfo.go  go.mod  main.go  template.go  template_test.go  version.go
cmd/protoc-gen-go-errors/: errors.go  go.mod  template.go
cmd/protoc-gen-go-http/: go.mod  http.go
cmd/protoc-gen-go-service/: go.mod  main.go  service.go  template.go  version.go
cmd/protoc-gen-openapi/: BUILD.bazel  go.mod  go.sum  main.go
cmd/protoc-gen-openapi/internal/generator/: BUILD.bazel  generator.go
cmd/protoc-gen-validate/: .gitignore  BUILD  Dockerfile  Makefile  README.md  go.mod  go.sum  main.go
config/: config.go  config_test.go  logger.go  options.go  reader.go  reader_test.go  value.go
config/env/: env.go  env_test.go  watcher.go
config/file/: file.go  file_test.go  watcher.go
csv/: csv.pb.go
encoding/csv/: csv.go  csv.pb.go  generate.go
encoding/form/: form.go  proto_decode.go
encoding/json/: json.go
encoding/proto/: proto.go
encoding/xml/: xml.go
encoding/yaml/: yaml.go
errors/: errors.go  errors.pb.go  errors.proto  generate.go
log/: log.go
metadata/: metadata_test.go
middleware/: middleware_test.go
middleware/logging/: logging.go  logging_test.go
middleware/metadata/: metadata.go  metadata_test.go
middleware/recovery/: recovery.go  recovery_test.go
middleware/tracing/: metadata.go  metadata_test.go  (+3 more)
transport/: transport.go
(+163 files in other folders)
