load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "generator",
    srcs = ["generator.go"],
    importpath = "github.com/thoohv5/common/cmd/protoc-gen-openapi/internal/generator",
    deps = ["//internal/descriptor"],
)

alias(
    name = "go_default_library",
    actual = ":generator",
    visibility = ["//:__subpackages__"],
)
